def/force-app/main/default/objects/A__c/A__c.object-meta.xml
<CustomObject>
    <label>A</label>
    <nameField>
        <label>A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>aa</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>