def/force-app/main/default/objects/A__c/fields/al__c.field-meta.xml
<CustomField>
    <fullName>al__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>aa</relationshipLabel>
    <relationshipName>aa</relationshipName>
    <type>Lookup</type>
</CustomField>