def/force-app/main/default/objects/A__c/fields/bv__c.field-meta.xml
<CustomField>
    <fullName>bv__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B</label>
    <referenceTo>B__c</referenceTo>
    <relationshipLabel>aa</relationshipLabel>
    <relationshipName>aa</relationshipName>
    <type>Lookup</type>
</CustomField>