def/force-app/main/default/objects/A__c/fields/X__c.field-meta.xml
<CustomField>
    <fullName>X__c</fullName>
    <label>X</label>
    <length>10</length>
    <type>Text</type>
</CustomField>